# vge

./: LICENSE  README.md  evaluate.py  pyproject.toml  requirements.txt  train.py
examples/: quick_start.py
src/vge/: __init__.py  metrics.py  models.py  predictors.py  trainers.py  utils.py  vgn.py
