[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vge"
version = "1.0.0"
description = "Variance-Gated Ensembles: An Epistemic-Aware Framework for Uncertainty Estimation"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "torch >= 2.10.0",
    "torchvision >= 0.25.0",
    "numpy >= 2.4.2",
    "pandas >= 3.0.0",
    "scikit-learn >= 1.8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
